<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.proyectocopy.MainActivity"
    android:background="#FFFFFF"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
        <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <ImageView
            android:layout_width="135dp"
            android:layout_height="60dp"
            android:background="@drawable/img1"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/cad1"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:background="#F7F7F7"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:gravity="center"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="#E5E3E6"
            >
            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/img10"/>
        </LinearLayout>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:background="#ffff"
            android:hint="@string/cad2"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/cad3"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/boton"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/cad4_1"
            android:textColor="#7D9FCA"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layout1"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cad4_2"
            android:textColor="#7D9FCA"
            android:textSize="17sp"
            android:background="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cad5"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="#555958"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cad6"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="#555958"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img8"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img3"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img4"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img5"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img6"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img7"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img9"
            android:layout_marginRight="15dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/img2"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#BDBFBC"
                    android:layout_marginTop="30dp"></View>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="382dp"
                android:layout_height="match_parent"
                android:layout_below="@id/layout3"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/cad7"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/cad9"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad8"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
